# videoSubtitleGenerator

./: .gitignore  Dockerfile  README.MD  app.py  docker-compose.yml  observations.txt  pyproject.toml  requirements.txt  srt_tools.py  subtitle_core.py
